<resources>
    <string name="app_name">Project_Lifeline</string>
    <string name="lifeline">lifeline</string>
    <string name="connecting_lives">Connecting Lives</string>
    <string name="log_in">log In</string>
    <string name="do_not_have_an_account">Do not have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">logo\n</string>
    <string name="Lifeline">Lifeline</string>
    <string name="sign_up_to_continue">Sign Up to Continue</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="back">back</string>
    <string name="back2">Back</string>
    <string name="lifeline2">Lifeline</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_address2">Email Address</string>
    <string name="password2">Password</string>
    <string name="log_in_again">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="emergency">Emergency</string>
    <string name="home">Home</string>
    <string name="request">Request</string>
    <string name="home1">Home</string>
    <string name="lifeline3">Lifeline</string>
    <string name="profile2">Profile</string>
    <string name="urgent_blood_needed">Urgent Blood Needed</string>
    <string name="view_request">View Request</string>
    <string name="emergency1">Emergency</string>
    <string name="lifeline4">Lifeline</string>
    <string name="home2">Home</string>
    <string name="request1">Request</string>
    <string name="emergency2">Emergency</string>
    <string name="search1">Search</string>
    <string name="profile1">Profile</string>
    <string name="request2">request1</string>
    <string name="request3">request2</string>
    <string name="home3">Home</string>
    <string name="back1">Back</string>
    <string name="user_profile">User Profile</string>
    <string name="rubaiya_islam">Rubaiya Islam</string>
    <string name="profile3">profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hugeicons">hugeicons</string>
    <string name="log_out">Log out</string>
    <string name="blood_group_b_plus">Blood Group: B+</string>
    <string name="material_symbols_home_outline_rounded">material_symbols_home_outline_rounded</string>
    <string name="request_for_proposal">request_for_proposal</string>
    <string name="request4">Request</string>
    <string name="material_symbols_search_rounded">material_symbols_search_rounded</string>
    <string name="emergency3">Emergency</string>
    <string name="humbleicons_aid">humbleicons_aid</string>
    <string name="search2">Search</string>
    <string name="iconamoon_profile">iconamoon_profile</string>
    <string name="profile4">Profile</string>
    <string name="successful">Successful</string>
    <string name="system_solid_31_check_2_1">system_solid_31_check_2_1</string>
    <string name="ok">OK</string>
    <string name="profile5">Profile</string>
    <string name="iconamoon_profile_1">iconamoon_profile__1_</string>
    <string name="search3">Search</string>
    <string name="material_symbols_search_rounded1">material_symbols_search_rounded</string>
    <string name="emergency4">Emergency</string>
    <string name="humbleicons_aid1">humbleicons_aid</string>
    <string name="donate">Donate</string>
    <string name="request_for_proposal1">request_for_proposal</string>
    <string name="home4">Home</string>
    <string name="material_symbols_home_outline_rounded1">material_symbols_home_outline_rounded</string>
    <string name="submit_request">Submit Request</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_hospital_name">Enter Hospital Name</string>
    <string name="blood_type">Blood Type</string>
    <string name="quantity">Quantity</string>
    <string name="request5">Request</string>
    <string name="blood">Blood</string>
    <string name="platelets">Platelets</string>
    <string name="platelet_donation_requirements">Platelet Donation Requirements</string>
    <string name="age_18_60_and_weight_50kg_n_must_be_healthy_and_fit_n_2_weeks_gap_between_platelet_donations_n_no_infection_fever_or_recent_surgery">• Age 18–60 and weight 50kg+\n• Must be healthy and fit\n• 2 weeks gap between platelet donations\n• No infection, fever, or recent surgery</string>
    <string name="profile6">Profile</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="blood_type1">Blood Type</string>
    <string name="quantity1">Quantity</string>
    <string name="enter_quantity_in_units">Enter Quantity (in units)</string>
    <string name="phone_number1">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="urgency">Urgency</string>
    <string name="enter_urgency">Enter Urgency</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="enter_hospital_name1">Enter Hospital Name</string>
    <string name="location">Location</string>
    <string name="enter_location1">Enter Location</string>
    <string name="submit_request1">Submit Request</string>
    <string name="home5">Home</string>
    <string name="request6">Donate</string>
    <string name="emergency5">Emergency</string>
    <string name="search4">Search</string>
    <string name="request_for_proposal2">request_for_proposal</string>
    <string name="humbleicons_aid2">humbleicons_aid</string>
    <string name="material_symbols_search_rounded2">material_symbols_search_rounded</string>
    <string name="iconamoon_profile_2">iconamoon_profile__1_</string>
    <string name="back3">Back</string>
    <string name="request_details">Request Details</string>
    <string name="profile7">Profile</string>
    <string name="rubaiya_islam1">Rubaiya Islam</string>
    <string name="_019388345345">019388345345</string>
    <string name="details">Details</string>
    <string name="blood_type_b">Blood Type: B+</string>
    <string name="quantity_2_bag">Quantity: 2 bag</string>
    <string name="urgency_urgenttextview">Urgency: UrgentTextView</string>
    <string name="hospital_name_city_hospital">Hospital Name: City Hospital</string>
    <string name="location_12_2_main_road_dhaka">Location: 12/2 , Main Road , Dhaka</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="sign">sign</string>
    <string name="logout1">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel2">Cancel</string>
    <string name="logout2">Logout</string>
    <string name="sign1">sign</string>
    <string name="are_you_sure_you_want_to_logout1">Are you sure you want to logout?</string>
    <string name="logout3">Logout</string>
    <string name="material_symbols_call_sharp">material_symbols_call_sharp</string>
    <string name="email_address1">Email Address</string>
    <string name="back4">Back</string>
    <string name="lifeline5">Lifeline</string>
    <string name="welcome">Welcome</string>
    <string name="password1">Password</string>
    <string name="log_in1">Log In</string>
    <string name="remember_me1">Remember me</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="request7">Request</string>
    <string name="enter_location2">Enter Location</string>
    <string name="submit_request2">Submit Request</string>
    <string name="blood2">Blood</string>
    <string name="platelets1">Platelets</string>
    <string name="blood_donation_requirements">Blood Donation Requirements</string>
    <string name="name1">Name</string>
    <string name="enter_name1">Enter Name</string>
    <string name="blood_type2">Blood Type</string>
    <string name="quantity2">Quantity</string>
    <string name="enter_quantity_in_units1">Enter Quantity (in units)</string>
    <string name="phone_number2">Phone Number</string>
    <string name="enter_phone_number1">Enter Phone Number</string>
    <string name="urgency1">Urgency</string>
    <string name="enter_urgency1">Enter Urgency</string>
    <string name="hospital_name1">Hospital Name</string>
    <string name="enter_hospital_name2">Enter Hospital Name</string>
    <string name="location1">Location</string>
    <string name="home6">Home</string>
    <string name="emergency6">Emergency</string>
    <string name="request8">Request</string>
    <string name="search5">Search</string>
    <string name="profile8">Profile</string>
    <string name="material_symbols_home_outline_rounded2">material_symbols_home_outline_rounded</string>
    <string name="request_for_proposal3">request_for_proposal</string>
    <string name="humbleicons_aid3">humbleicons_aid</string>
    <string name="material_symbols_search_rounded3">material_symbols_search_rounded</string>
    <string name="iconamoon_profile_12">iconamoon_profile__1_</string>
    <string name="age_18_60_and_weight_50kg_n_must_be_healthy_and_fit_n_3_months_gap_between_donations_n_no_infection_fever_or_recent_surgery">• Age 18–60 and weight 50kg+\n• Must be healthy and fit\n• 3 months gap between donations\n• No infection, fever, or recent surgery</string>
    <string name="back_button1">Back Button</string>
    <string name="hospital_information">Hospital Information</string>
    <string name="lifeline_sr">Lifeline</string>
    <string name="join_our_community_save_a_life">Join our community. Save a life.</string>
    <string name="how_would_you_like_to_join">How would you like to join?</string>
    <string name="full_name_sr">Full Name</string>
    <string name="email_sr">Email</string>
    <string name="blood_type_sr">Blood Type</string>
    <string name="location_sr">Location</string>
    <string name="create_password">Create Password</string>
    <string name="i_am_a_donor">I am a Donor</string>
    <string name="create_account">Create Account</string>
    <string name="you_example_com">you@example.com</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="select_your_city_region">Select your city/region</string>
    <string name="enter_a_secure_password">Enter a secure password</string>
    <string name="i_am_a_recipient">I am a Recipient</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="lifeline_sd">Lifeline</string>
    <string name="join_our_community_save_a_life2">Join our community. Save a life.</string>
    <string name="how_would_you_like_to_join2">How would you like to join?</string>
    <string name="full_nameSD">Full Name</string>
    <string name="emailSD">Email</string>
    <string name="blood_typeSD">Blood Type</string>
    <string name="ageSD">Age</string>
    <string name="genderSD">Gender</string>
    <string name="locationSD">Location</string>
    <string name="create_passwordSD">Create Password</string>
    <string name="i_am_a_donorSD">I am a Donor</string>
    <string name="create_accountSD">Create Account</string>
    <string name="enter_your_ageSD">Enter your age</string>
    <string name="enter_your_genderSD">Enter your gender</string>
    <string name="you_example_comSD">you@example.com</string>
    <string name="enter_your_full_nameSD">Enter your full name</string>
    <string name="select_your_city_regionSD">Select your city/region</string>
    <string name="enter_a_secure_passwordSD">Enter a secure password</string>
    <string name="i_am_a_recipientSD">I am a Recipient</string>
    <string name="already_have_an_account_log_inSD">Already have an account? Log In</string>
</resources>