<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- App Logo Title -->
        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifeline_sr"
            android:textColor="#D90429"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_gravity="center" />

        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_our_community_save_a_life"
            android:layout_gravity="center"
            android:paddingTop="4dp"
            android:textSize="14sp"
            android:textColor="#2D3748" />

        <!-- Title -->
        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_would_you_like_to_join"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#2D3748" />

        <!-- Toggle: Blood | Platelets -->
        <LinearLayout
            android:id="@+id/typeToggle"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp"

            android:orientation="horizontal"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requestTitle">


            <!-- Submit Button -->
            <Button
                android:id="@+id/Donor_Btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#F8F3F3"
                android:paddingVertical="12dp"
                android:text="@string/i_am_a_donor"
                android:textColor="#141414"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,DuplicateIds,VisualLintButtonSize" />

            <!-- Submit Button -->
            <Button
                android:id="@+id/recipient_Btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#D32F2F"
                android:text="@string/i_am_a_recipient"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,DuplicateIds,VisualLintButtonSize" />


        </LinearLayout>

        <!-- Full Name -->
        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/full_name_sr"
            android:textSize="14sp"
            android:paddingTop="20dp"
            android:textStyle="bold"
            android:textColor="#2D3748"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/inputFullName"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="363dp"
            android:layout_height="48dp"
            android:hint="@string/enter_your_full_name"
            android:importantForAutofill="no"
            android:padding="14dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Email -->
        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/email_sr"
            android:textSize="14sp"
            android:paddingTop="14dp"
            android:textStyle="bold"
            android:textColor="#2D3748"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/inputEmail"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/you_example_com"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Blood Type -->
        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/blood_type_sr"
            android:textSize="14sp"
            android:paddingTop="14dp"
            android:textStyle="bold"
            android:textColor="#2D3748"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerBlood"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="14dp" />

        <!-- Location -->
        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:importantForAutofill="no"
            android:text="@string/location_sr"
            android:textSize="14sp"
            android:paddingTop="14dp"
            android:textStyle="bold"
            android:textColor="#2D3748"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/inputLocation"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/select_your_city_region"
            android:paddingStart="40dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill,RtlSymmetry,VisualLintTextFieldSize" />

        <!-- Password -->
        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:importantForAutofill="no"
            android:text="@string/create_password"
            android:textSize="14sp"
            android:paddingTop="14dp"
            android:textStyle="bold"
            android:textColor="#2D3748"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/inputPassword"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_a_secure_password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <!-- Create Account Button -->
        <Button
            android:id="@+id/btnCreateAccount"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/create_account"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#D90429"
            android:layout_marginTop="24dp"
            tools:ignore="VisualLintButtonSize" />

        <!-- Log In -->
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_log_in"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:textColor="#2D3748"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>