<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#F7F7F7"
    android:padding="24dp">

    <!-- Card Container -->


    <!-- Logout Icon -->
    <ImageView
        android:id="@+id/logoutIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"

        android:contentDescription="@string/sign1"
        android:padding="16dp"
        android:src="@drawable/sign"
        android:tint="#333333"
        tools:ignore="UseAppTint" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvLogoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"
        app:tint="#333333" />

        <!-- Description -->
        <TextView
            android:id="@+id/tvLogoutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_logout1"
            android:textColor="#444444"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginBottom="24dp" />

        <!-- Buttons -->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel2"
                android:textColor="#000000"

                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnLogout"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#E50914"
                android:text="@string/logout2"
                android:textColor="#FFFFFF"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </LinearLayout>


